WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278315
REGRESSION (
282418@main
) Broke the visionOS build
https://bugs.webkit.org/show_bug.cgi?id=278315
Summary
REGRESSION (282418@main) Broke the visionOS build
Jonathan Bedard
Reported
2024-08-19 07:52:51 PDT
282418@main
broke visionOS builds with: "Unknown type name 'LayerHostingContextIdentifier'; did you mean 'WebCore::LayerHostingContextIdentifier'? ModelProcessModelPlayer.cpp:68"
Attachments
Add attachment
proposed patch, testcase, etc.
Jonathan Bedard
Comment 1
2024-08-19 07:52:53 PDT
<
rdar://problem/134254186
>
Jonathan Bedard
Comment 2
2024-08-19 07:54:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32386
EWS
Comment 3
2024-08-19 07:57:47 PDT
Committed
282426@main
(bf9a66aef928): <
https://commits.webkit.org/282426@main
> Reviewed commits have been landed. Closing PR #32386 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug