REGRESSION (282418@main) Broke the visionOS build https://bugs.webkit.org/show_bug.cgi?id=278315 rdar://134254186

Unreviewed build fix.

* Source/WebKit/WebProcess/Model/ModelProcessModelPlayer.cpp:
(WebKit::ModelProcessModelPlayer::didCreateLayer):

Canonical link: https://commits.webkit.org/282426@main