Source/WebKit/WebProcess/Model/ModelProcessModelPlayer.cpp
@@ -65,7 +65,7 @@ ALWAYS_INLINE void ModelProcessModelPlayer::send(T&& message)
 
 // MARK: - Messages
 
-void ModelProcessModelPlayer::didCreateLayer(LayerHostingContextIdentifier identifier)
+void ModelProcessModelPlayer::didCreateLayer(WebCore::LayerHostingContextIdentifier identifier)
 {
     RELEASE_LOG(ModelElement, "%p - ModelProcessModelPlayer obtained new layerHostingContextIdentifier id=%" PRIu64, this, m_id.toUInt64());
     m_layerHostingContextIdentifier = identifier;
